# eos-notes

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: 30_eos-notes
src/: db.rs  gui.rs  main.rs  orbital_platform.rs
ui/: notes.slint
