[package]
name = "eos-notes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "E-OS Notes — Crimson-themed notes app (Slint UI, SQLite/WAL storage)"
repository = "https://gitlab.com/e-os/eos-notes"
build = "build.rs"

[[bin]]
name = "eos-notes"
path = "src/main.rs"

[dependencies]
# Modern Slint with the pure software renderer — E-OS drives it over
# orbclient via src/orbital_platform.rs (custom slint::platform::Platform).
# No winit: modern winit lacks the APIs slint needs on Redox, and the old
# winit 0.28 orbital backend uses the removed legacy `event:` kernel scheme.
slint = { version = "1.17", default-features = false, features = ["compat-1-0", "std", "renderer-software", "unstable-fontique-010"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# The GUI (Slint + winit orbital) is a Redox-target concern; hosts build the
# CLI/selftest half only (winit 0.28 no longer compiles on modern host rustc).
default = ["gui"]
gui = ["dep:slint"]

[target.'cfg(target_os = "redox")'.dependencies]
orbclient = "0.3"

[build-dependencies]
slint-build = "1.17"

[profile.release]
# E-OS hardening baseline (matches the code forks): any unintended integer
# overflow aborts instead of wrapping silently.
overflow-checks = true
