[package]
name = "eos-notes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "E-OS Notes — Crimson-themed notes app (Slint UI, SQLite/WAL storage)"
repository = "https://gitlab.com/e-os/eos-notes"
build = "build.rs"

[[bin]]
name = "eos-notes"
path = "src/main.rs"

[dependencies]
# The GUI uses Slint for the widgets; the Redox backend (software renderer over
# orbclient) + font bootstrap live in the shared eos-ui crate.
slint = { version = "1.17", default-features = false, features = ["compat-1-0", "std", "renderer-software"], optional = true }
eos-ui = { git = "https://github.com/Gh0s777tt/eos-ui.git", rev = "c53180d40e5b91f15c848c4c39b1a307b14831a1", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# The GUI is a Redox-target concern; hosts build the CLI/selftest half only
# (--no-default-features) — Slint's host winit backend no longer compiles on a
# modern host rustc.
default = ["gui"]
gui = ["dep:slint", "dep:eos-ui"]

[build-dependencies]
slint-build = "1.17"

[profile.release]
# E-OS hardening baseline (matches the code forks): any unintended integer
# overflow aborts instead of wrapping silently.
overflow-checks = true
